<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:scaleType="centerInside"
            android:src="@drawable/coven_one" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:fontFamily="@font/willow"
            android:padding="10dp"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="#DF2333"
            android:textSize="28sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/willow"
            android:padding="5dp"
            android:text="@string/welcome_ctd"
            android:textAlignment="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#DF2333"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/question_one" />

        <RadioGroup
            android:id="@+id/q1_answer_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/q1_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_one_rb_mino"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/q1_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_one_rb_pega"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/q1_answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_one_rb_sat"
                android:textStyle="bold" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#DF2333"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/question_two" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instrument"
            android:layout_marginBottom="16dp"
            android:inputType="textCapWords"
            android:maxLines="1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#DF2333"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/question_three" />

        <EditText
            android:id="@+id/input_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie"
            android:layout_marginBottom="16dp"
            android:inputType="textCapWords"
            android:maxLines="1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#DF2333"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/question_four" />

        <RadioGroup
            android:id="@+id/q4_answer_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/q4_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_four_rb_handy"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/q4_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_four_rb_axe"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/q4_answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_four_rb_knife"
                android:textStyle="bold" />

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#DF2333"></View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/question_five" />

        <RadioGroup
            android:id="@+id/q5_answer_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <RadioButton
                android:id="@+id/q5_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_five_rb_clair"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/q5_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_five_rb_sight"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/q5_answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_five_rb_resurge"
                android:textStyle="bold" />

        </RadioGroup>

        <Button
            android:id="@+id/result_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_result"
            android:textSize="20dp"
            android:fontFamily="@font/willow"
            android:textColor="#DF2333" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_again"
            android:textSize="20dp"
            android:fontFamily="@font/willow"
            android:textColor="#DF2333" />

    </LinearLayout>


</ScrollView>
